--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port = 8090
+server.port = 8080
 
 spring.datasource.url=jdbc:hsqldb:hsql://localhost:9001
 spring.datasource.username=SA
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.data.web.pageable.page-parameter =0
 spring.data.web.pageable.default-page-size= 5
+
+spring.security.oauth2.client.registration.google.clientId=632369789239-sa8s3kbr9hnn4lhi9plvj8drgd2ga1vg
+spring.security.oauth2.client.registration.google.clientSecret=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
+spring.security.oauth2.client.registration.google.scope=email, profile
